Fixed contrast of the focus ul li a

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,7 +113,7 @@ body {
 }
 
 #main-nav ul li.active a {
-  color: black;
+  color: #FFFACD;
 }
 
 #main-nav ul li.active a:hover {
